--- a/src/components/Pokedex.css
+++ b/src/components/Pokedex.css
@@ -9,7 +9,6 @@
   filter: drop-shadow(0 0 0 black) drop-shadow(0 0 1px black);
 }
 
-
 /* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
 /** {
   scrollbar-width: thin;
@@ -21,32 +20,42 @@
   width: 17px;
 }
 .pokedex-scrollbar::-webkit-scrollbar-track {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 7rem;
+  margin-bottom: 5rem;
   border-radius: 0px;
-  background: linear-gradient(to bottom, #5882A5, #1B3E64);
-  border: 2px solid #9EC1F5;
+  background: linear-gradient(to bottom, #5882a5, #1b3e64);
+  border: 2px solid #9ec1f5;
   transition: background-color 0.3s ease;
 }
 
 .pokedex-scrollbar::-webkit-scrollbar-track:hover {
-   background: linear-gradient(to bottom, #5882A5, #1B3E64);
+  background: linear-gradient(to bottom, #5882a5, #1b3e64);
 }
 
 .pokedex-scrollbar::-webkit-scrollbar-track:active {
-  background: linear-gradient(to bottom, #5882A5, #1B3E64);
+  background: linear-gradient(to bottom, #5882a5, #1b3e64);
 }
 
 .pokedex-scrollbar::-webkit-scrollbar-thumb {
   border-radius: 5px;
-  background-color: #DA4443;
-  border: 2px solid #B53732;
+  background-color: #da4443;
+  border: 2px solid #b53732;
 }
 
 .pokedex-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #B53732;
+  background-color: #b53732;
 }
 
 .pokedex-scrollbar::-webkit-scrollbar-thumb:active {
-  background-color: #B53732;
+  background-color: #b53732;
+}
+
+.stripes-background {
+  background-image: linear-gradient(to bottom, #f3f9f8 70%, #cbe6f0 50%);
+  background-size: 100% 20px;
+  background-repeat: repeat;
+}
+
+.text-outlined {
+  -webkit-text-stroke: 2px var( --color-header-counter);
 }
