Refactor components and styles for improved organization and performance
- Updated import paths in Header.jsx and PokemonCard.jsx for consistency.
- Commented out unused CSS rules in Pokedex.css to clean up styles.
- Enhanced PokedexList.jsx to utilize a scroll container for better performance.
- Replaced inline styles in PokemonCard.jsx with CSS modules for better maintainability.
- Updated index.css to change the default font and add new utility classes for vertical text.
- Migrated utility functions from utils.js to a new utils.js file, consolidating functionality.
- Added a new font file (Thraex_Magnus.woff2) for enhanced typography.
- Created a new CSS module (PokemonCard.module.css) for styling Pokemon cards with generation-specific borders.
- Implemented a new Main.jsx page to serve as the main application layout.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
-.background {
-  /* background-color: #7a9de0; */
+/* .background {
 background: linear-gradient(
   to bottom,
   #6790e3 0%,
@@ -38,4 +37,4 @@ background: linear-gradient(
   #6790e3 100%
 );
 
-}
+} */
