Add PokedexList styling with bottom shadow effect and scrollbar customization

--- a/src/components/PokemonCard.module.css
+++ b/src/components/PokemonCard.module.css
@@ -18,21 +18,21 @@
 
 .effect3D {
   box-shadow: inset -2px -2px 5px rgba(0, 0, 0, 1),
-    inset 4px 4px 4px rgba(255, 255, 255, 1), 3px 0px 12px rgba(0, 0, 0, 0.7);
+    inset 4px 4px 4px rgba(255, 255, 255, 1), 6px 4px 5px 0px rgba(0,0,0,0.6);
 }
 
 .gen1 {
   border-style: solid;
   border-image: linear-gradient(
     90deg,
-    rgba(255, 255, 255, 0.5) 0%,
-    rgba(228, 0, 43, 1) 12%,
-    rgba(228, 0, 43, 1) 36%,
-    rgba(0, 115, 180, 1) 36%,
-    rgba(0, 115, 180, 1) 64%,
-    rgba(255, 222, 0, 1) 64%,
-    rgba(255, 222, 0, 1) 92%,
-    rgba(0, 0, 0, 0.5) 100%
+    rgba(255, 255, 255, 1) 0%,
+    var(--color-pokemon-red) 12%,
+    var(--color-pokemon-red) 36%,
+    var(--color-pokemon-blue) 36%,
+    var(--color-pokemon-blue) 64%,
+    var(--color-pokemon-yellow) 64%,
+    var(--color-pokemon-yellow) 92%,
+    rgba(0, 0, 0, 1) 100%
   );
   border-image-slice: 1;
 }
@@ -42,12 +42,12 @@
   border-image: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1) 0%,
-    rgba(212, 175, 55, 1) 12%,
-    rgba(212, 175, 55, 1) 36%,
-    rgba(192, 192, 192, 1) 36%,
-    rgba(192, 192, 192, 1) 64%,
-    rgba(139, 190, 206, 1) 64%,
-    rgba(139, 190, 206, 1) 92%,
+    var(--color-pokemon-gold) 12%,
+    var(--color-pokemon-gold) 36%,
+    var(--color-pokemon-silver) 36%,
+    var(--color-pokemon-silver) 64%,
+    var(--color-pokemon-crystal) 64%,
+    var(--color-pokemon-crystal) 92%,
     rgba(0, 0, 0, 1) 100%
   );
   border-image-slice: 1;
@@ -58,12 +58,12 @@
   border-image: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1) 0%,
-    rgba(155, 17, 30, 1) 12%,
-    rgba(155, 17, 30, 1) 36%,
-    rgba(15, 82, 186, 1) 36%,
-    rgba(15, 82, 186, 1) 64%,
-    rgba(80, 200, 120, 1) 64%,
-    rgba(80, 200, 120, 1) 92%,
+    var(--color-pokemon-ruby) 12%,
+    var(--color-pokemon-ruby) 36%,
+    var(--color-pokemon-sapphire) 36%,
+    var(--color-pokemon-sapphire) 64%,
+    var(--color-pokemon-emerald) 64%,
+    var(--color-pokemon-emerald) 92%,
     rgba(0, 0, 0, 1) 100%
   );
   border-image-slice: 1;
@@ -74,12 +74,12 @@
   border-image: linear-gradient(
     90deg,
     rgba(255, 255, 255, 1) 0%,
-    rgba(185, 242, 255, 1) 12%,
-    rgba(185, 242, 255, 1) 36%,
-    rgba(224, 187, 228, 1) 36%,
-    rgba(224, 187, 228, 1) 64%,
-    rgba(229, 228, 226, 1) 64%,
-    rgba(229, 228, 226, 1) 92%,
+    var(--color-pokemon-diamond) 12%,
+    var(--color-pokemon-diamond) 36%,
+    var(--color-pokemon-pearl) 36%,
+    var(--color-pokemon-pearl) 64%,
+    var(--color-pokemon-platinum) 64%,
+    var(--color-pokemon-platinum) 92%,
     rgba(0, 0, 0, 1) 100%
   );
   border-image-slice: 1;
@@ -88,69 +88,73 @@
 .gen5 {
   border-style: solid;
   border-image: linear-gradient(
-      90deg,
-      rgba(248, 248, 248, 1) 0%,
-      rgba(248, 248, 248, 1) 45%,
-      rgba(54, 69, 79, 1) 45%,
-      rgba(54, 69, 79, 1) 90%,
-      rgba(0, 0, 0, 1) 100%
-    )
-    1;
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    var(--color-pokemon-black) 12%,
+    var(--color-pokemon-black) 52%,
+    var(--color-pokemon-white) 52%,
+    var(--color-pokemon-white) 92%,
+    rgba(0, 0, 0, 1) 100%
+  );
   border-image-slice: 1;
 }
 
 .gen6 {
   border-style: solid;
   border-image: linear-gradient(
-      90deg,
-      rgba(220, 20, 60, 1) 0%,
-      rgba(220, 20, 60, 1) 45%,
-      rgba(30, 144, 255, 1) 45%,
-      rgba(30, 144, 255, 1) 90%,
-      rgba(0, 0, 0, 1) 100%
-    )
-    1;
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    var(--color-pokemon-x) 12%,
+    var(--color-pokemon-x) 52%,
+    var(--color-pokemon-y) 52%,
+    var(--color-pokemon-y) 92%,
+    rgba(0, 0, 0, 1) 100%
+  );
   border-image-slice: 1;
 }
 
 .gen7 {
   border-style: solid;
   border-image: linear-gradient(
-      90deg,
-      rgba(255, 165, 0, 1) 0%,
-      rgba(255, 165, 0, 1) 45%,
-      rgba(25, 25, 112, 1) 45%,
-      rgba(25, 25, 112, 1) 90%,
-      rgba(0, 0, 0, 1) 100%
-    )
-    1;
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    var(--color-pokemon-sun) 12%,
+    var(--color-pokemon-sun) 52%,
+    var(--color-pokemon-moon) 52%,
+    var(--color-pokemon-moon) 92%,
+    rgba(0, 0, 0, 1) 100%
+  );
   border-image-slice: 1;
 }
 
 .gen8 {
   border-style: solid;
   border-image: linear-gradient(
-      90deg,
-      rgba(139, 0, 0, 1) 0%,
-      rgba(139, 0, 0, 1) 45%,
-      rgba(65, 105, 225, 1) 45%,
-      rgba(65, 105, 225, 1) 90%,
-      rgba(0, 0, 0, 1) 100%
-    )
-    1;
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    var(--color-pokemon-sword) 12%,
+    var(--color-pokemon-sword) 52%,
+    var(--color-pokemon-shield) 52%,
+    var(--color-pokemon-shield) 92%,
+    rgba(0, 0, 0, 1) 100%
+  );
   border-image-slice: 1;
 }
 
 .gen9 {
   border-style: solid;
   border-image: linear-gradient(
-      90deg,
-      rgba(255, 36, 0, 1) 0%,
-      rgba(255, 36, 0, 1) 45%,
-      rgba(106, 13, 173, 1) 45%,
-      rgba(106, 13, 173, 1) 90%,
-      rgba(0, 0, 0, 1) 100%
-    )
-    1;
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    var(--color-pokemon-scarlet) 12%,
+    var(--color-pokemon-scarlet) 52%,
+    var(--color-pokemon-violet) 52%,
+    var(--color-pokemon-violet) 92%,
+    /* rgba(255, 36, 0, 1) 12%,
+    rgba(255, 36, 0, 1) 52%,
+    rgba(106, 13, 173, 1) 52%,
+    rgba(106, 13, 173, 1) 92%, */
+    rgba(0, 0, 0, 1) 100%
+  );
   border-image-slice: 1;
 }
