--- a/src/components/PokedexList.module.css
+++ b/src/components/PokedexList.module.css
@@ -2,10 +2,10 @@
     box-shadow: 1px 4px 20px 3px rgba(0,0,0,0.75);
 }
 
-/* *::-webkit-scrollbar {
+*::-webkit-scrollbar {
   display: none;
 }
 * {
   -ms-overflow-style: none; 
   scrollbar-width: none;
-} */
+}
