Add missing dark color variable to theme

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 @theme {
   --color-card-background-1: #C1C1A8;
   --color-card-background-2: #BBBB9F;
+  --color-dark: #1B2B3A;
 
   /* Pokemon Games Colors */
   /* Gen 1 */
