--- a/src/components/Layout.module.css
+++ b/src/components/Layout.module.css
@@ -1,9 +1,9 @@
-.footer-background {
+.background {
   background-image: linear-gradient(
     to bottom,
-    var(--color-white) 60%,
+    var(--color-white) 70%,
     var(--color-gray-100) 50%
   );
-  background-size: 100% 10px;
+  background-size: 100% 5px;
   background-repeat: repeat;
 }
