--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,8 +1,17 @@
-.main-background{
-    background-image: url("/src/assets/wallpaper.webp");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    width: 100%;
+.main-background {
+  background-image: url("/src/assets/wallpaper.webp");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+}
+
+.details-background {
+  background: #1a4883;
+  background: linear-gradient(
+    180deg,
+    rgba(26, 72, 131, 1) 0%,
+    rgba(32, 120, 158, 1) 100%
+  );
 }
