--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,20 @@
   --font-cabin-condensed: "Cabin Condensed", sans-serif;
   --font-oswald: "Oswald", sans-serif;
   --font-magnus: "Magnus", sans-serif;
+
+  --animate-breath: breath 1.5s ease-in-out infinite;
+
+  @keyframes breath {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.1);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
 }
 
 @utility text-vertical-rl {
